--- a/last2weeks/lambdaCSS.css
+++ b/last2weeks/lambdaCSS.css
@@ -126,20 +126,23 @@ hr{
 }
 
 .carousel-content{
-    padding: 20px;
-    background-color: white;
+/*     padding: 20px;
+    bsackground-color: white; */
+    background-color: #ffefeb;
+
 }
 
 #info-box .carousel-content .img-responsive{
     padding: 20px;
-    width: 100%;
+    width: auto;
+    max-height: 250px;
     text-align: center;
     margin-top: 0px;
     margin-bottom: 0px;
     border: 0px solid #dbdbdb;
     align-self:auto;
-    background-color: #f4f4f4;
-}
+/*     background-color: #f4f4f4;
+     */}
 
 /**********************
 3-1. INFO BOX
@@ -493,6 +496,7 @@ Defines the typography for texts in reader */
     text-rendering: optimizeLegibility;
     max-width: 580px;
     margin-bottom: 1em;
+    font-family: "HKGrotesk";
 }
 
 
@@ -790,9 +794,6 @@ a {
     margin-top:10px;    
 }
 
-#toc_wrapper_print{
-    display: none;
-}
 #toc_wrapper h2 {
     position: relative;
     margin: 0;
@@ -1433,10 +1434,21 @@ Table of content is contained in pushmenu, it shows the different parts of the b
     color:black !important;
 }
 
+#arrows #down:active, #arrows #up:active{
+    color:black !important;
+}
+
 #arrows #up a:focus, #arrows #down a:focus{
     color:black !important;
 }
 
+#arrows #up:focus, #arrows #down:focus{
+    color:black !important;
+}
+
+#arrows #up a:active, #arrows #down a:active{
+    color:black !important;
+}
 
 #arrows #up:hover, #arrows #down:hover{
     color: #f30;
@@ -1831,6 +1843,16 @@ color: blue;
     display: inline;
 }
 
+.pin-close{
+    font-size: 16px;
+    cursor: pointer;
+    color: rgb(63, 222, 63);
+}
+
+.pin-close:hover{
+    color: #f30;
+}
+
 #tools {
     top: 2%;
     right: 1%;
@@ -2135,6 +2157,53 @@ ol {
     background-color: rgba(28, 51, 229, 0.3);
 }
 
+
+.section .keyword-button{
+    border-radius:5px;
+    padding: 2px;
+    padding-left:5px;
+    padding-right: 5px;
+    margin-right:4px;
+    margin-bottom: 8px;
+    background-color: #f4f4f4;  
+    color: black;  
+    border:none;
+    height: auto;
+}
+
+.section .keyword-button:hover {
+    border-radius:5px;
+    padding: 2px;
+    padding-left:5px;
+    padding-right: 5px;
+    margin-right:4px;
+    margin-bottom: 8px;
+    background-color: rgba(28, 51, 229, 0.1);  
+    color: blue;  
+    border:none;
+    height: auto;
+    box-shadow: inset 0 3px 5px rgba(0,0,0,.135);
+}
+.section .btn.active{
+    box-shadow: inset 0 3px 5px rgba(0,0,0,.135);
+    background-color: rgba(28, 51, 229, 0.3);
+    color: blue;  
+}
+.section .keyword-button:focus{
+    box-shadow: 0 3px 5px rgba(0,0,0,.135);
+    background-color: rgba(28, 51, 229, 0.1);  
+    color: blue;  
+}
+
+
+
+
+
+
+
+
+
+
 #highlight-show-all{
     background-color:rgba(255, 255, 69, 0.2);
     color:rgb(222, 188, 0);
@@ -2217,13 +2286,11 @@ ol {
 .panel-default>.panel-heading:hover{
     color: black;
     text-decoration: none;
-    background-color: white;
 }
 
 .panel-default>.panel-heading:focus{
     color: black;
     text-decoration: none;
-    background-color: white;
 }
 
 .panel-default>.panel-heading:active{
