--- a/last2weeks/lambdaCSS.css
+++ b/last2weeks/lambdaCSS.css
@@ -2396,34 +2396,37 @@ ol {
     border: 0px solid #a0a0a0;
 }
 
+.tooltip-inner {
+    text-align: left;
+}
 
 /* Tooltip */
-.tooltip > .tooltip-inner {
+/*.tooltip > .tooltip-inner {
     background-color: #73AD21; 
     color: #FFFFFF; 
     border: 1px solid green;
     width: 350px; 
-}
+}*/
 
 /* Tooltip on top */
-.tooltip.top > .tooltip-arrow {
+/*.tooltip.top > .tooltip-arrow {
     border-top: 5px solid green;
-}
+}*/
 
 /* Tooltip on bottom */
-.tooltip.bottom > .tooltip-arrow {
+/*.tooltip.bottom > .tooltip-arrow {
     border-bottom: 5px solid blue;
-}
+}*/
 
 /* Tooltip on left */
-.tooltip.left > .tooltip-arrow {
+/*.tooltip.left > .tooltip-arrow {
     border-left: 5px solid red;
-}
+}*/
 
 /* Tooltip on right */
-.tooltip.right > .tooltip-arrow {
+/*.tooltip.right > .tooltip-arrow {
     border-right: 5px solid black;
-}
+}*/
 
 .caret{
     display:none;
